Complete_notebook_and_Submission_csv

--- a/main.ipynb
+++ b/main.ipynb
@@ -810,12 +810,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# PReLU Activation is having lower loss and mae"
+    "### PReLU Activation is having lower loss and mae"
    ]
   },
   {
